[fix/fix-bug] add new twitter x to social share and fix frontend spacing

--- a/src/editor/blocks/social-share-item/styles/style.scss
+++ b/src/editor/blocks/social-share-item/styles/style.scss
@@ -55,6 +55,16 @@
     .gutenverse-share-text {
       background: #156a9f;
     }
+
+    &.x-twitter {
+      .gutenverse-share-icon {
+        background: #14171A;
+      }
+  
+      .gutenverse-share-text {
+        background: #2d2d2d;
+      }
+    } 
   }
 
   &.gutenverse-share-pinterest {
